--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -50,15 +50,16 @@ main {
 }
 
 /* Action style */
-.action {
+.fetch {
     background-color: #66BB6A;
     font-size: 16px;
     padding: 10px 20px;
     border-radius: 6px;
-    margin: 10px 0;
+    margin: 10px auto;
+    max-width: 200px;
 }
 
-.action:hover {
+.fetch:hover {
     background-color: #4CAF50;
 }
 
@@ -131,9 +132,10 @@ figcaption {
 
 .popup.open {
     visibility: visible;
+    z-index: 1;
 }
 
-.action {
+.popup .close {
     position: absolute;
     top: 50px;
     right: 50px;
@@ -142,7 +144,8 @@ figcaption {
     font-size: 50px;
     width: 40px;
     height: 40px;
-    border-radius: 50%;
+    padding: 0;
+    margin: 0;
 }
 
 .popup .content {
